# docsmith-cli

./: .gitignore  README.md  pyproject.toml
docsmith/: __init__.py  cli.py  files.py  inspector.py  pdf.py  renderer.py  server.py
tests/: test_cli.py
