[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsmith-cli"
version = "0.1.1"
description = "Documentation generator, converter, inspector, and preview server for developer docs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "shazeus" }]
keywords = ["documentation", "markdown", "cli", "static-site", "converter"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "click>=8.1",
  "flask>=3.0",
  "markdown-it-py>=3.0",
  "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/shazeus/docsmith-cli"
Repository = "https://github.com/shazeus/docsmith-cli"
Issues = "https://github.com/shazeus/docsmith-cli/issues"

[project.scripts]
docsmith = "docsmith.cli:main"

[tool.setuptools.packages.find]
include = ["docsmith*"]
